feat: Business-Cockpit: Add Workflow-List
